Moved pos tags out of reader.py into a special folder with (in the future) multiple sources

--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "ae0487b9-e1cc-40e5-93a3-fd549ff98e28",
    "metadata": {
     "scrolled": true
@@ -756,7 +756,7 @@
        " (0.0, 'demeanours')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,8 +765,9 @@
     "# Get a frequency ordered list of nouns\n",
     "# PLease also choose a task:\n",
     "task = 'NR'\n",
-    "df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/data.tsv', sep='\\t', keep_default_na=False)\n",
-    "nn_df = df[ (df['subject']==get_subjects_list()[0]) & (df['part_of_speech'].isin(['NN', 'NNS'])) ] ['content']\n",
+    "pos_tags_src = 'nltk'\n",
+    "df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_tags/{pos_tags_src}.tsv', sep='\\t', keep_default_na=False)\n",
+    "nn_df = df[ (df['part_of_speech'].isin(['NN', 'NNS'])) ] ['content']\n",
     "nn_df = pd.unique( nn_df.apply(normalize_word) )\n",
     "ordered_nouns = list(reversed( sorted( [(zipf_frequency(w, 'en'), w) for w in nn_df] ) ))\n",
     "ordered_nouns"
@@ -774,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "77eaa1c4-0b69-402e-9012-0ea8db779a02",
    "metadata": {
     "scrolled": true
@@ -1488,7 +1489,7 @@
        " (7.73, 'the')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "6b389b2e-bc59-4f7b-b879-3a5355543aac",
    "metadata": {},
    "outputs": [
@@ -1547,9 +1548,10 @@
     "# plot the given eeg channels for the given words\n",
     "# the shorter appearences are padded with their own mean to match the longest appearence\n",
     "# finally all appearences are averaged and the selected channels are plotted and saved in the EXTRACTED_DATA_PATH/statistics folder\n",
-    "task = 'TSR'\n",
+    "task = 'NR'\n",
     "plot_channel = 51 # in device indices (a.k.a. 1-128)\n",
     "plot_count = 10\n",
+    "pos_tags_src = 'nltk'\n",
     "\n",
     "highfreq_colors = [(1, 0, 0), # red\n",
     "                   (1, 0.33, 0), # orange \n",
@@ -1560,18 +1562,19 @@
     "\n",
     "def helper_get_word_eeg(word_df):\n",
     "    '''\n",
-    "    Takes in a dataframe containing the 'content', 'subject', 'sentence_id', 'word_idx' columnns\n",
+    "    Takes in a dataframe containing the 'content', 'sentence_id', 'word_idx' columnns\n",
     "    corresponding to a single word (perhaps accross different sentences and subjects). It reads their eeg data,\n",
     "    padds shorter appearences with their mean to match the longest one and returns their mean.\n",
     "    '''\n",
     "    eeg_data = []\n",
     "    maxlen = 0\n",
     "    for appearence in word_df.itertuples(index=False):\n",
-    "        eeg_data.append( get_raw_word_eeg( (task, appearence[1], appearence[2], appearence[3]) ) )\n",
-    "        if eeg_data[-1] is None:\n",
-    "            eeg_data.pop()\n",
-    "        else:\n",
-    "            maxlen = max(maxlen, eeg_data[-1].shape[0])\n",
+    "        for subject in get_subjects_list():\n",
+    "            eeg_data.append( get_raw_word_eeg( (task, subject, appearence[1], appearence[2]) ) )\n",
+    "            if eeg_data[-1] is None:\n",
+    "                eeg_data.pop()\n",
+    "            else:\n",
+    "                maxlen = max(maxlen, eeg_data[-1].shape[0])\n",
     "    for i in range(len(eeg_data)):\n",
     "        padded = np.empty((maxlen, eeg_data[i].shape[1]), dtype=np.float64)\n",
     "        padded[:eeg_data[i].shape[0], :] = eeg_data[i]\n",
@@ -1579,10 +1582,10 @@
     "        eeg_data[i] = padded\n",
     "    return np.mean( np.array(eeg_data), axis=0 )\n",
     "\n",
-    "df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/data.tsv', sep='\\t', keep_default_na=False)\n",
-    "df = df[ (df['part_of_speech'].isin(['NN', 'NNS'])) ] [['content', 'subject', 'sentence_id', 'word_idx']]\n",
+    "df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_tags/{pos_tags_src}.tsv', sep='\\t', keep_default_na=False)\n",
+    "df = df[ (df['part_of_speech'].isin(['NN', 'NNS'])) ] [['content', 'sentence_id', 'word_idx']]\n",
     "\n",
-    "nn_df = df[ (df['subject']==get_subjects_list()[0]) ] ['content']\n",
+    "nn_df = df ['content']\n",
     "nn_df = pd.unique( nn_df.apply(normalize_word) )\n",
     "ordered_nouns = list(reversed(sorted( [(zipf_frequency(w, 'en'), w) for w in nn_df] )))\n",
     "\n",
@@ -1592,12 +1595,13 @@
     "for nidx in range(0, min(len(highfreq_nouns), len(lowfreq_nouns)), 3):\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    for j in range(3):\n",
+    "        # plot highfreq\n",
     "        word = highfreq_nouns[nidx+j]\n",
     "        word_df = df[ df['content'].apply(lambda w : normalize_word(w)==word) ]\n",
     "        word_data = helper_get_word_eeg(word_df)\n",
     "        plt.plot([t for t in range(word_data.shape[0])], word_data[:, device_channel_to_data_channel(plot_channel)], \n",
     "                 label=f'\"{word}\", zipf_freq={zipf_frequency(word, \"en\")}', color=highfreq_colors[j]) #TODO freq\n",
-    "    for j in range(3):\n",
+    "        # plot lowfreq\n",
     "        word = lowfreq_nouns[nidx+j]\n",
     "        word_df = df[ df['content'].apply(lambda w : normalize_word(w)==word) ]\n",
     "        word_data = helper_get_word_eeg(word_df)\n",
