added power spectral density plots

--- a/pos_analysis.ipynb
+++ b/pos_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "31000214-fee8-4a8c-9d68-3d6a8ea3add7",
    "metadata": {},
    "outputs": [],
@@ -2450,8 +2450,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4fa040d0-5a6e-4e58-918c-1b4aaa6f0286",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Potting for noun-common...\n",
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Plotting power spectral density (dB=True).\n",
+      "Finished plotting for noun-common\n",
+      "Potting for noun-proper...\n",
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Plotting power spectral density (dB=True).\n",
+      "Finished plotting for noun-proper\n",
+      "Potting for adjective...\n",
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Plotting power spectral density (dB=True).\n",
+      "Finished plotting for adjective\n",
+      "Potting for pronoun...\n",
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Plotting power spectral density (dB=True).\n",
+      "Finished plotting for pronoun\n",
+      "Potting for adverb...\n",
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Plotting power spectral density (dB=True).\n",
+      "Finished plotting for adverb\n",
+      "Potting for verb...\n",
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Plotting power spectral density (dB=True).\n",
+      "Finished plotting for verb\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate spectral density plots of the activations of each part of speech in tagmap\n",
+    "# only word instances win TRT>=min_trt are accepted\n",
+    "# shorter instances are padded (according to padding) and averaged together\n",
+    "# afterwards the eeg means of the instances are padded to match the longest and averaged again\n",
+    "# Results are saved in the pos_analysis/topomaps folder\n",
+    "\n",
+    "task = 'TSR'\n",
+    "pos_tags_src = 'nltk'\n",
+    "min_trt = 500\n",
+    "padding = 'mean'\n",
+    "\n",
+    "tagmap = {\n",
+    "    'noun-common': ['NN', 'NNS'],\n",
+    "    'noun-proper': ['NNP', 'NNPS'],\n",
+    "    'adjective': ['JJ', 'JJR', 'JJS'],\n",
+    "    'pronoun': ['PRP', 'PRP$'],\n",
+    "    'adverb': ['RB', 'RBR', 'RBS'],\n",
+    "    'verb': ['VB', 'VBD', 'VBG', 'VBN', 'VBP', 'VBZ']\n",
+    "}\n",
+    "\n",
+    "if not os.path.exists(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_analysis/spectrography'):\n",
+    "    os.makedirs(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_analysis/spectrography')\n",
+    "\n",
+    "pos_df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_tags/{pos_tags_src}.tsv', sep='\\t', keep_default_na=False, na_values=[''])\n",
+    "full_df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/data.tsv', sep='\\t', keep_default_na=False, na_values=[''])\n",
+    "full_df['TRT'] = full_df['TRT'].astype(float)\n",
+    "\n",
+    "def helper_process_pos_df_row(row):\n",
+    "    curr_full_df = full_df[(full_df['TRT']>=min_trt) & (full_df['sentence_id']==row['sentence_id']) & (full_df['word_idx']==row['word_idx'])]\n",
+    "    eeg_mean = helper_get_word_mean_eeg( curr_full_df[['task', 'sentence_id', 'word_idx']], padding=padding )\n",
+    "    return eeg_mean\n",
+    "\n",
+    "for pos in tagmap.keys():\n",
+    "    print(f'Potting for {pos}...')\n",
+    "    curr_pos_df = pos_df[ pos_df['part_of_speech'].isin(tagmap[pos]) ]\n",
+    "    instance_means = curr_pos_df.apply(helper_process_pos_df_row, axis=1).dropna()\n",
+    "    maxlen = instance_means.apply(lambda x: len(x)).max()\n",
+    "    padded_instance_means = instance_means.apply(eeg_data_pad_to_len, args=(maxlen, padding)).to_numpy()\n",
+    "    pos_mean = np.mean(padded_instance_means, axis=0)\n",
+    "    evoked = get_evoked_for_eeg_data(pos_mean, frequency=1000) # TODO freq\n",
+    "    spectrum = evoked.compute_psd(n_jobs=3)\n",
+    "    fig = spectrum.plot(exclude='bads', show=False)\n",
+    "    fig.savefig(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_analysis/spectrography/{pos}_psd_{padding}.png', format='png', dpi=1200)\n",
+    "    plt.close()\n",
+    "    print(f'Finished plotting for {pos}')\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b266f2d-f41d-4bfa-9731-c97ff1fbe5b9",
    "metadata": {},
    "outputs": [],
    "source": []
