wordfreq predictor model + addictional PSDs for parts-of-speech

--- a/pos_analysis.ipynb
+++ b/pos_analysis.ipynb
@@ -17,6 +17,8 @@
     "from wordfreq import zipf_frequency\n",
     "import re\n",
     "\n",
+    "from commons import normalize_word\n",
+    "\n",
     "from reader import EXTRACTED_DATA_PATH\n",
     "from reader import EEG_CHANNEL_COUNT\n",
     "from reader import MISSING_DATA_SYMBOL\n",
@@ -35,10 +37,6 @@
     "from eeg_plotter import get_evoked_for_eeg_data\n",
     "from eeg_plotter import get_raw_word_eeg\n",
     "from eeg_plotter import get_raw_word_eeg_mean\n",
-    "\n",
-    "\n",
-    "def normalize_word(word): # removes punctuation from the beginning and end and lowers the capitalization\n",
-    "    return re.sub(r'^[^a-zA-Z0-9]+|[^a-zA-Z0-9]+$', '', word).lower()\n",
     "\n",
     "def helper_get_word_mean_eeg(word_df, padding = 'mean'):\n",
     "    '''\n",
@@ -2450,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "4fa040d0-5a6e-4e58-918c-1b4aaa6f0286",
    "metadata": {},
    "outputs": [
@@ -2495,7 +2493,7 @@
     "\n",
     "task = 'TSR'\n",
     "pos_tags_src = 'nltk'\n",
-    "min_trt = 500\n",
+    "min_trt = 200\n",
     "padding = 'mean'\n",
     "\n",
     "tagmap = {\n",
@@ -2507,8 +2505,8 @@
     "    'verb': ['VB', 'VBD', 'VBG', 'VBN', 'VBP', 'VBZ']\n",
     "}\n",
     "\n",
-    "if not os.path.exists(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_analysis/spectrography'):\n",
-    "    os.makedirs(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_analysis/spectrography')\n",
+    "if not os.path.exists(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_analysis/spectrography/mintrt{min_trt}'):\n",
+    "    os.makedirs(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_analysis/spectrography/mintrt{min_trt}')\n",
     "\n",
     "pos_df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_tags/{pos_tags_src}.tsv', sep='\\t', keep_default_na=False, na_values=[''])\n",
     "full_df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/data.tsv', sep='\\t', keep_default_na=False, na_values=[''])\n",
@@ -2529,7 +2527,7 @@
     "    evoked = get_evoked_for_eeg_data(pos_mean, frequency=1000) # TODO freq\n",
     "    spectrum = evoked.compute_psd(n_jobs=3)\n",
     "    fig = spectrum.plot(exclude='bads', show=False)\n",
-    "    fig.savefig(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_analysis/spectrography/{pos}_psd_{padding}.png', format='png', dpi=1200)\n",
+    "    fig.savefig(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/pos_analysis/spectrography/mintrt{min_trt}/{pos}_psd_{padding}.png', format='png', dpi=1200)\n",
     "    plt.close()\n",
     "    print(f'Finished plotting for {pos}')\n",
     "print('Done')"
@@ -2537,8 +2535,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2b266f2d-f41d-4bfa-9731-c97ff1fbe5b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3837.0)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "task = 'TSR'\n",
+    "full_df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/data.tsv', sep='\\t', keep_default_na=False, na_values=[''])\n",
+    "full_df['TRT'] = full_df['TRT'].astype(float)\n",
+    "full_df['TRT'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4c11f170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "143831"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(full_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "31674b68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>sentence_id</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>task</th>\n",
+       "      <th>content</th>\n",
+       "      <th>word_idx</th>\n",
+       "      <th>GD</th>\n",
+       "      <th>TRT</th>\n",
+       "      <th>FFD</th>\n",
+       "      <th>SFD</th>\n",
+       "      <th>GPT</th>\n",
+       "      <th>nFix</th>\n",
+       "      <th>reading_order</th>\n",
+       "      <th>first_fixation_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>He was also the unsuccessful Republican nomine...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>YMD</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>He</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>He was also the unsuccessful Republican nomine...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>YMD</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>also</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>He was also the unsuccessful Republican nomine...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>YMD</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>unsuccessful</td>\n",
+       "      <td>4</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>209.0</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>179.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>He was also the unsuccessful Republican nomine...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>YMD</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>nominee</td>\n",
+       "      <td>6</td>\n",
+       "      <td>251.0</td>\n",
+       "      <td>251.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>251.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>587.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>He was also the unsuccessful Republican nomine...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>YMD</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>President</td>\n",
+       "      <td>8</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>298.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>778.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143822</th>\n",
+       "      <td>In 1999 Bush cofounded a educational-software ...</td>\n",
+       "      <td>389</td>\n",
+       "      <td>YAK</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>types</td>\n",
+       "      <td>16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143824</th>\n",
+       "      <td>In 1999 Bush cofounded a educational-software ...</td>\n",
+       "      <td>389</td>\n",
+       "      <td>YAK</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>content</td>\n",
+       "      <td>18</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2604.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143826</th>\n",
+       "      <td>In 1999 Bush cofounded a educational-software ...</td>\n",
+       "      <td>389</td>\n",
+       "      <td>YAK</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>appeal</td>\n",
+       "      <td>20</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2745.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143828</th>\n",
+       "      <td>In 1999 Bush cofounded a educational-software ...</td>\n",
+       "      <td>389</td>\n",
+       "      <td>YAK</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>multiple</td>\n",
+       "      <td>22</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143830</th>\n",
+       "      <td>In 1999 Bush cofounded a educational-software ...</td>\n",
+       "      <td>389</td>\n",
+       "      <td>YAK</td>\n",
+       "      <td>TSR</td>\n",
+       "      <td>styles.</td>\n",
+       "      <td>24</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>3104.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71916 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 sentence  sentence_id  \\\n",
+       "0       He was also the unsuccessful Republican nomine...            0   \n",
+       "2       He was also the unsuccessful Republican nomine...            0   \n",
+       "4       He was also the unsuccessful Republican nomine...            0   \n",
+       "6       He was also the unsuccessful Republican nomine...            0   \n",
+       "8       He was also the unsuccessful Republican nomine...            0   \n",
+       "...                                                   ...          ...   \n",
+       "143822  In 1999 Bush cofounded a educational-software ...          389   \n",
+       "143824  In 1999 Bush cofounded a educational-software ...          389   \n",
+       "143826  In 1999 Bush cofounded a educational-software ...          389   \n",
+       "143828  In 1999 Bush cofounded a educational-software ...          389   \n",
+       "143830  In 1999 Bush cofounded a educational-software ...          389   \n",
+       "\n",
+       "       subject task       content  word_idx     GD    TRT    FFD    SFD  \\\n",
+       "0          YMD  TSR            He         0    NaN    NaN    NaN    NaN   \n",
+       "2          YMD  TSR          also         2    NaN    NaN    NaN    NaN   \n",
+       "4          YMD  TSR  unsuccessful         4  112.0  209.0  112.0    NaN   \n",
+       "6          YMD  TSR       nominee         6  251.0  251.0  106.0    NaN   \n",
+       "8          YMD  TSR     President         8  170.0  298.0   51.0    NaN   \n",
+       "...        ...  ...           ...       ...    ...    ...    ...    ...   \n",
+       "143822     YAK  TSR         types        16    NaN    NaN    NaN    NaN   \n",
+       "143824     YAK  TSR       content        18  154.0  154.0  154.0  154.0   \n",
+       "143826     YAK  TSR        appeal        20   84.0   84.0   84.0   84.0   \n",
+       "143828     YAK  TSR      multiple        22  121.0  121.0  121.0  121.0   \n",
+       "143830     YAK  TSR       styles.        24  125.0  125.0  125.0  125.0   \n",
+       "\n",
+       "          GPT  nFix  reading_order  first_fixation_time  \n",
+       "0         NaN   NaN            NaN                  NaN  \n",
+       "2         NaN   NaN            NaN                  NaN  \n",
+       "4       112.0   2.0            2.0                179.0  \n",
+       "6       251.0   2.0            4.0                587.0  \n",
+       "8       170.0   3.0            5.0                778.0  \n",
+       "...       ...   ...            ...                  ...  \n",
+       "143822    NaN   NaN            NaN                  NaN  \n",
+       "143824  154.0   1.0           13.0               2604.0  \n",
+       "143826   84.0   1.0           14.0               2745.0  \n",
+       "143828  121.0   1.0           15.0               2899.0  \n",
+       "143830  125.0   1.0           17.0               3104.0  \n",
+       "\n",
+       "[71916 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_df[ [i%2==0 for i in range(143831)] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "448174b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2546,7 +2877,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
