Added n300amp feature extraction

--- a/wordfreq_analysis.ipynb
+++ b/wordfreq_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "edc36fd3-b64c-4bc2-b149-b3c55e2709ef",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "import re\n",
     "import gc\n",
     "from sklearn.linear_model import SGDRegressor\n",
+    "from sklearn.neural_network import MLPRegressor\n",
     "\n",
     "from commons import normalize_word\n",
     "\n",
@@ -122,7 +123,7 @@
     "        y = np.array([zipf_frequency(word, 'en')], dtype=np.float64)\n",
     "        yield (x, y)\n",
     "\n",
-    "model = SGDRegressor()\n",
+    "model_mean = SGDRegressor()\n",
     "task = 'NR'\n",
     "channels = [51]\n",
     "\n",
@@ -137,7 +138,7 @@
     "test_df = full_df[ is_test_row ]\n",
     "\n",
     "for x, y in in_out_data_generator_mean(train_df, channels):\n",
-    "    model.partial_fit(x, y)\n",
+    "    model_mean.partial_fit(x, y)\n",
     "\n",
     "print('Finished training')\n",
     "\n",
@@ -150,7 +151,7 @@
     "for x, y, in in_out_data_generator_mean(test_df, channels):\n",
     "    test_x.append(x[0])\n",
     "    test_y.append(y)\n",
-    "    prediction = model.predict(x)\n",
+    "    prediction = model_mean.predict(x)\n",
     "    sse += (prediction[0]-y[0])**2\n",
     "    sae += abs( y[0]-prediction[0] )\n",
     "    if y[0]!=0:\n",
@@ -160,7 +161,7 @@
     "print(f'Average absolute error: {sae / len(test_x)}')\n",
     "print(f'Average squared error: {sse / len(test_x)}')\n",
     "print(f'Average error percentage: {sep / n0yc}')\n",
-    "print(f'Sklearn score: {model.score(test_x, test_y)}')\n"
+    "print(f'Sklearn score: {model_mean.score(test_x, test_y)}')\n"
    ]
   },
   {
@@ -181,7 +182,107 @@
    "source": [
     "# print a random prediction-actual frequency pair\n",
     "for x, y in in_out_data_generator_mean(full_df.sample(), channels):\n",
-    "    print(f'Model prediction: {model.predict(x)}')\n",
+    "    print(f'Model prediction: {model_mean.predict(x)}')\n",
+    "    print(f'Actual frequency: {y}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9946ee3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished training\n",
+      "Average absolute error: 1.111136034870802\n",
+      "Average squared error: 2.02207320876787\n",
+      "Average error percentage: 25.059441470418008\n",
+      "Sklearn score: 0.023450968519594384\n"
+     ]
+    }
+   ],
+   "source": [
+    "def in_out_data_generator_n300amp(data_df, channels=LANGUAGE_CHANNELS): # TODO freq\n",
+    "    '''\n",
+    "    data_df: must contain at least these columns: 'task', 'subject', 'content', 'sentence_id', 'word_idx'\n",
+    "    channels: device channels to use (channels in MISSING_CHANNELS will be ignored)\n",
+    "    Extracts the associated N300 peak as such: averages eeg data within 250-350ms over 10ms intervals and returns the mean eeg data of the interval with the gratest N300 \n",
+    "    (lowest amplitude). If multiple channels, cummulative sum is used for comparison. Missing data within the interval is filled with 0s.\n",
+    "    '''\n",
+    "    data_df = data_df[ ['task', 'subject', 'content', 'sentence_id', 'word_idx'] ]\n",
+    "    channels = [device_channel_to_data_channel(c) for c in channels if c not in MISSING_CHANNELS]\n",
+    "    for row in data_df.itertuples(index=False):\n",
+    "        task, subject, word, sent_id, word_idx = row\n",
+    "        eeg_data_path = f'{EXTRACTED_DATA_PATH}extracted_data_{task}/eeg_data/{subject}/{sent_id}/word_{word_idx}_raw.tsv'\n",
+    "        if not os.path.exists(eeg_data_path):\n",
+    "            continue\n",
+    "        eeg_data = pd.read_csv(eeg_data_path, sep='\\t', usecols=lambda col: col!='sentence_relative_fix_idx').to_numpy()\n",
+    "        channels_data = eeg_data[249:min(349, len(eeg_data)), channels] \n",
+    "        means = np.zeros((10, len(channels)), dtype=np.float64)\n",
+    "        for i in range(10):\n",
+    "            if i*10 >= len(channels_data):\n",
+    "                break\n",
+    "            else:\n",
+    "                means[i] = np.mean(channels_data[i*10:(i+1)*10], axis=0)\n",
+    "        x = np.zeros((1, len(channels)), dtype=np.float64)\n",
+    "        x[0] = means[ np.argmin( np.sum(means, axis=1) ) ]\n",
+    "        y = np.array([zipf_frequency(word, 'en')], dtype=np.float64)\n",
+    "        yield (x, y)\n",
+    "\n",
+    "\n",
+    "model_n300amp = MLPRegressor(hidden_layer_sizes=(50, 20))\n",
+    "task = 'NR'\n",
+    "channels = LANGUAGE_CHANNELS\n",
+    "\n",
+    "full_df = pd.read_csv(f'{EXTRACTED_DATA_PATH}extracted_data_{task}/data.tsv', sep='\\t', keep_default_na=False, na_values=[''])\n",
+    "\n",
+    "# very lazy 80/20 train-test split\n",
+    "is_test_row = [i%5==0 for i in range(len(full_df))]\n",
+    "is_train_row = [not b for b in is_test_row] \n",
+    "\n",
+    "train_df = full_df[ is_train_row ]\n",
+    "test_df = full_df[ is_test_row ]\n",
+    "\n",
+    "for x, y in in_out_data_generator_n300amp(train_df, channels):\n",
+    "    model_n300amp.partial_fit(x, y)\n",
+    "\n",
+    "print('Finished training')\n",
+    "\n",
+    "test_x = []\n",
+    "test_y = []\n",
+    "sse = 0 # sum of squared errors\n",
+    "sae = 0 # sum of absolute errors\n",
+    "sep = 0 # sum of error percentages (excluding 0s)\n",
+    "n0yc = 0 # non-0 y count\n",
+    "for x, y, in in_out_data_generator_n300amp(test_df, channels):\n",
+    "    test_x.append(x[0])\n",
+    "    test_y.append(y)\n",
+    "    prediction = model_n300amp.predict(x)\n",
+    "    sse += (prediction[0]-y[0])**2\n",
+    "    sae += abs( y[0]-prediction[0] )\n",
+    "    if y[0]!=0:\n",
+    "        sep += abs( (y[0]-prediction[0]) / y[0]) * 100\n",
+    "        n0yc+=1\n",
+    "\n",
+    "print(f'Average absolute error: {sae / len(test_x)}')\n",
+    "print(f'Average squared error: {sse / len(test_x)}')\n",
+    "print(f'Average error percentage: {sep / n0yc}')\n",
+    "print(f'Sklearn score: {model_n300amp.score(test_x, test_y)}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95123834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print a random prediction-actual frequency pair\n",
+    "for x, y in in_out_data_generator_mean(full_df.sample(), channels):\n",
+    "    print(f'Model prediction: {model_mean.predict(x)}')\n",
     "    print(f'Actual frequency: {y}')"
    ]
   },
